# gcodec

./: .gitignore  AwePrelude.hs  Bool.hs  ETests.lhs  EmulatorTests.hs  Expr.hs  FInterpreter.hs  FanucMacro.hs  GCode.hs  GEmulator.hs  GEmulatorEngine.hs  GEmulatorTests.hs  GInterpreter.hs  GOperator.hs  GParser.hs  GTypes.hs  GeneratorTests.hs  Geometry.hs  HCode.hs  HCodeTests.hs  InterpreterTests.hs  LICENSE  Makefile  ProductionTest.hs  ProductionTest2.hs  Tests.hs  Types.hs  VarMap.hs  continuous_build.sh  gcodec.cabal  slots_milling.hs
AwePrelude/: Bool.hs  Eq.hs  Ord.hs
src/CNC/: AwePrelude.hs  Declarative.hs  Expr.hs  FInterpreter.hs  FanucMacro.hs  Figure.hs  GEmulator.hs  GInterpreter.hs  GParser.hs  GTypes.hs  Geometry.hs  HCode.hs  VarMap.hs
src/CNC/AwePrelude/: Bool.hs  Eq.hs  Ord.hs
test/CNC/: DeclarativeTests.hs  HCodeTests.hs  IntegrationTests.hs  InterpreterTests.hs  Tests.hs
