name:                GCodec
version:             0.2
description:         A Haskell DSL for writing Fanuc Macro programs
license:             GPL-2
author:              akamaus@gmail.com, lebastr@gmail.com

build-type:          Simple
cabal-version:       >=1.8

executable GEmulator
  main-is:             GEmulator.hs
  build-depends:       attoparsec >= 0.10,
                       base >= 4,
                       blaze-builder >= 0.3,
                       bytestring >= 0.10,
                       containers > 0.5,
                       fclabels >= 1,
                       text >= 0.11,
                       mtl

executable Tests
  main-is:             Tests.hs
  build-depends:       attoparsec >= 0.10,
                       base >= 4,
                       blaze-builder >= 0.3,
                       bytestring >= 0.10,
                       containers > 0.5,
                       fclabels >= 1,
                       text >= 0.11,
                       mtl
